# django-eventstream

./: .gitignore  README.md  pyproject.toml  setup.py  writeup.md
.github/: CODEOWNERS
.github/workflows/: django.yml
django_eventstream/: __init__.py  admin.py  apps.py  authorizer.py  channelmanager.py  consumers.py  event.py  eventrequest.py  eventresponse.py  eventstream.py  models.py  requestmapper.py  routing.py  storage.py  urls.py  utils.py  views.py  viewsets.py
django_eventstream/migrations/: 0001_initial.py
django_eventstream/renderers/: __init__.py  browsableapieventstreamrenderer.py  sserenderer.py
django_eventstream/tests/: __init__.py  basesseclient.py  sseapiclient.py  sseclient.py
django_eventstream/views/: __init__.py  apiviews.py  eventstreamerview.py  sseview.py  sseviewset.py  views.py
examples/basic/: README.md  requirements.txt
examples/chat/: README.md  requirements.txt  test.py  test_sse.py
examples/chat-restframework/: README.md  manage.py  requirements.txt
examples/chat2/: manage.py  requirements.txt
examples/time/: README.md  manage.py  requirements.txt
src/: __init__.py  apps.py  authorizer.py  eventrequest.py  utils.py
src/migrations/: 0001_initial.py
tests/: .coveragerc  apiview.py  conftest.py  requirements.txt  runtests.py  settings.py  stress_test.py  test_drf_imports.py  test_ngrok_command.py  test_performance.py  test_send_event.py  test_sseapiview.py  test_storage.py  test_stream.py  test_testclient.py  test_utils.py  tests.py  urls.py
tests/test_views/: test_basesseview.py  test_sseapiview.py  (+1 more)
(+66 files in other folders)
